restarted project due to layout issues

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,252 +1,201 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+/* Base Layout */
+
 * {
-    font-family: "Poppins", serif;
     margin: 0;
     padding: 0;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: #999;
-  }
-
-::-webkit-scrollbar-thumb {
-    background: #777;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
 body {
-    position: relative;
-}
-
-header {
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-}
-
-header h1 {
-    position: absolute;
-    color: white;
-    left: 140px;
-    top: 12px;
-}
-
-li {
-    list-style: none;
+    font-family: "Poppins", sans-serif;
 }
 
 a {
-    color: white;
     text-decoration: none;
+    font-weight: 400;
+    font-size: 1.6rem;
+    color: white;
 }
 
-.navbar {
+h1, h2, p {
+    margin: 1.6rem 0;
+}
+
+h1 {
+    font-weight: 800;
+    font-size: 3.6rem;
+}
+h2 {
+    font-weight: 800;
+    font-size: 2.4rem;
+}
+
+p {
+    font-weight: 400;
+    font-size: 1.8rem;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+.row {
     display: flex;
-    list-style: none;
-    justify-content: flex-end;
-    z-index: 2;
+    justify-content: space-between;
+    width: 80%;
+    align-items: center;
+    margin: auto;
 }
 
-.navbar li {
-    padding: 0px 10px 0px 10px;
-    font-size: 25px;
-    font-weight: 600;
-    cursor: pointer;
-    margin: 20px 20px 0 0;
+section {
+    padding: 100px 0;
 }
 
-.navbar li a {
-    position: relative;
-    text-decoration: none;
+
+/* Hero Section */
+
+header {
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.3)), url(../images/coding2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     color: white;
-    padding: 4px 0;
 }
 
-.navbar li a:before {
+.logo {
+    display: flex;
+    align-items: center;
+    
+    gap: 2rem;
+}
+
+.logo img {
+    width: 30%;
+    border-radius: 50%;
+    display: inline-block;
+    
+}
+
+.logo h1 {
+    display: inline-block;
+    font-size: 3.2rem;
+    color: white;
+    margin: 0;
+}
+
+nav {
+    padding: 2% 8% 2% 2%;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav box-icon {
+    display: none;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-left: 2.5rem;
+}
+
+nav ul li a {
+    position: relative;
+}
+
+nav ul li a:before {
     content: '';
     position: absolute;
-    height: 3px;
-    width: 0%;
-    background: #f23813;
-    bottom: 0;
+    bottom: -0.2rem;
     left: 0;
+    height: 0.3rem;
+    width: 0%;
+    background: orangered;
     transition: all 0.5s ease;
 }
 
-.navbar li a:hover:before {
+nav ul li a:hover:before {
     width: 100%;
 }
 
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: white;
+.header-content h1 {
+    width: 50%;
+    position: relative;
+    font-size: 10rem;
+    top: 16%;
+    left: 8%;
 }
 
-.hero {
-    display: flex;
-    
-}
-
-.wrapper .hero {
-    display: flex;
-    background-image: url(../images/coding2.jpg);
-    height: 698px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: blur(6px);
-    padding: 20px;
-    transform: scale(1.03)
-    
-}
-
-.wrapper #seal-logo {
-    position: absolute;
-    top: 0;
-}
-
-.wrapper h2 {
-    position: absolute;
-    top: 150px;
-    right: 50px;
-    color: white;
-    font-size: 70px;
-}
-
-.wrapper p {
-    position: absolute;
-    right: 130px;
-    top: 550px;
-    color: white;
-    font-size: 30px;
-    font-weight: 400;
-    width: 500px;
-}
-
-#seal-logo {
-    display: flex;
-    z-index: 1;
-    border-radius: 50%;
-    height: 100px;
-    margin: 20px;
-}
-
-.current-project-container {
-    position: absolute;
-    top: 15%;
+.header-content p {
+    width: 50%;
+    position: relative;
+    top: 60%;
     left: 10%;
-    width: 766px;
-    height: 342px;
-    z-index: 3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Media Queries */
+
+@media screen and (max-width: 768px) {
     
-}
-
-.current-project-container h3 {
-    color: white;
-    position: absolute;
-    left: 50px;
-    top: 40px;
-    font-size: 30px;
-    font-weight: 400;
-}
-
-.current-project-container img {
-    position: absolute;
-    top: 80px;
+    .logo img {
+        width: 12%;
+    }
     
-    filter: grayscale(100%);
-    -webkit-filter: grayscale(100%);
-    -webkit-transition: all 1s ease;
-    cursor: pointer;
-    border-radius: 20px;
-    
-}
+    .logo h1 {
+        font-size: 3.6rem;
+    }
 
-.current-project-container img:hover {
-    filter: grayscale(0%);
-    filter: gray;
-    -webkit-filter: grayscale(0%);
-    filter: none;
-    transition: 1s ease;
-}
+    nav {
+        flex-direction: column;
+        position: relative;
+    }
 
-.project-section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    background-color: #4d4e4f;
-    transform: scale(1.03);
-    height: 940px;
-    width: 100%;
-    margin-right: 0;
-}
+    nav box-icon {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 32px;
+    }
 
-.project-section #project-header {
-   position: absolute;
-   top: 850px;
-   color: white;
-   font-size: 55px;
-
-}
-
-.project-section img {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 300px;
-    min-width: 30%;
-    margin-right: 20%;
-    margin-top: 10%;
-}
-
-@media screen and (max-width: 1560px) {
-    .current-project-container {
+    nav ul {
+        background: rgba(10, 10, 10, .65);
+        box-shadow: 0 8px 32px rgb(2, 4, 24);
+        border:2px solid rgb(255, 255, 255, .09);
+        backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
         display: none;
     }
-}
 
-
-@media screen and (max-width: 860px) {
-
-    .navbar {
-        flex-direction: column;
-        align-items: flex-end;
-        
-    }
-    
-
-    .wrapper h2 {
-        position: absolute;
-        left: 15%;
-        top: 250px;
-        font-size: 55px;
+    nav ul li {
+        display: block;
+        padding: 2% 0;
     }
 
-    .wrapper p {
-        position: absolute;
-        font-size: 3vw;
-        left: 10px;
-        text-align: center;
-        margin: 0 30px;
-        max-width: 425px;
+    nav ul li a {
+        color: white;
+    }
+
+    .showmenu {
+        display: block;
     }
 }
